[gd_scene load_steps=6 format=3 uid="uid://doul72ap13hmc"]

[ext_resource type="PackedScene" uid="uid://btcpjdktuymx" path="res://scenes/tile_map.tscn" id="1_8drt1"]
[ext_resource type="Script" path="res://scenes/tent_ext.gd" id="1_pxeim"]
[ext_resource type="PackedScene" uid="uid://bhysbh3p85m13" path="res://scenes/christina.tscn" id="2_5rcga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s121e"]
size = Vector2(267, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_smku0"]
radius = 15.5563

[node name="tent_ext" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_pxeim")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TileMap" parent="." instance=ExtResource("1_8drt1")]
layer_0/tile_data = PackedInt32Array(2818113, 65541, 1, 2752577, 5, 0, 2687041, 65541, 1, 2621505, 65541, 1, 2621507, 65541, 1, 2621506, 65541, 0, 2687042, 65541, 1, 2752578, 131077, 0, 2687043, 65541, 1, 2818112, 458757, 1, 2752575, 327685, 0, 2687039, 65541, 1, 2621503, 65541, 1, 2621504, 65541, 1, 2687040, 65541, 1, 2752576, 458757, 0, 2687038, 65541, 1, 2621502, 65541, 1, 2621499, 5, 2, 2687035, 65541, 1, 2752571, 65541, 1, 2818107, 65541, 1, 2883643, 65541, 1, 2949179, 65541, 1, 3014715, 65541, 1, 2621500, 65541, 1, 2687036, 65541, 1, 2752572, 5, 2, 2818108, 65541, 1, 2883644, 65541, 1, 2949180, 65541, 1, 3014716, 65541, 1, 2621501, 65541, 1, 2687037, 5, 1, 2752573, 65541, 0, 2818109, 5, 0, 2883645, 65541, 0, 2949181, 65541, 1, 3014717, 65541, 0, 2752574, 5, 2, 2818110, 65541, 1, 2883646, 65541, 1, 2949182, 5, 2, 3014718, 65541, 1, 2818111, 327685, 1, 2883647, 327685, 1, 2949183, 327685, 1, 3014719, 327685, 1, 2883648, 458757, 1, 2949184, 458757, 1, 3014720, 458757, 1, 2883649, 65541, 1, 2949185, 65541, 1, 3014721, 65541, 1, 2818114, 65541, 1, 2883650, 65541, 1, 2949186, 65541, 1, 3014722, 65541, 1, 2752579, 65541, 1, 2818115, 65541, 1, 2883651, 5, 1, 2949187, 65541, 1, 3014723, 65541, 1, 2621508, 65541, 1, 2687044, 65541, 1, 2752580, 65541, 1, 2818116, 131077, 1, 2883652, 65541, 1, 2949188, 131077, 2, 3014724, 65541, 1)
layer_1/tile_data = PackedInt32Array(2490436, 65539, 0, 2555972, 65539, 1, 2490429, 3, 0, 2490428, 65539, 0, 2555965, 65539, 1, 2555964, 65539, 1, 2555963, 65539, 1, 2555966, 65539, 1, 2555967, 65539, 1, 2555968, 65539, 1, 2555969, 65539, 1, 2555970, 65539, 1, 2555971, 65539, 1, 2490427, 3, 0, 2490430, 3, 0, 2490431, 3, 0, 2490432, 65539, 0, 2490433, 3, 0, 2490434, 3, 0, 2490435, 3, 0)
layer_2/y_sort_enabled = true
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(2490430, 393219, 2, 2490435, 393219, 2, 2752580, 327683, 1, 2490436, 327683, 4, 2555972, 327683, 1, 2490429, 393219, 2, 2490428, 393219, 2, 2818116, 327683, 1, 2687044, 327683, 1, 2621508, 327683, 1, 2490427, 393219, 4, 2490431, 393219, 2, 2490432, 393219, 2, 2490433, 393219, 2, 2490434, 393219, 2, 2555963, 458755, 1, 2621499, 458755, 1, 2687035, 458755, 1, 2752571, 458755, 1, 2818107, 458755, 1, 2883643, 458755, 1, 2949179, 458755, 1, 3014715, 393219, 3, 2883652, 327683, 1, 2949188, 327683, 1, 3014724, 327683, 3, 3014716, 393219, 0, 3014717, 393219, 0, 3014718, 458755, 0, 3014721, 327683, 0, 3014722, 393219, 0, 3014723, 393219, 0, 2621502, 12, 2, 2555967, 65548, 1, 2621503, 65548, 2, 2555968, 131084, 1, 2621504, 131084, 2, 2621505, 196620, 2)
layer_3/tile_data = PackedInt32Array(2687038, 12, 3, 2687039, 65548, 3, 2687040, 131084, 3, 2687041, 196620, 3)
layer_6/name = "shadow"
layer_6/z_index = 1
layer_6/tile_data = PackedInt32Array(2621501, 393241, 2, 2621502, 393241, 2, 2621503, 393241, 2, 2621504, 393241, 2, 2621505, 393241, 2, 2621506, 393241, 2, 2621507, 393241, 2, 2621500, 393241, 2, 2621508, 327705, 4, 2621499, 393241, 4, 2555963, 393241, 1, 2555964, 393241, 1, 2555965, 393241, 1, 2555966, 393241, 1, 2555967, 393241, 1, 2555968, 393241, 1, 2555969, 393241, 1, 2555970, 393241, 1, 2555971, 393241, 1, 2555972, 393241, 1, 2490436, 393241, 1, 2490435, 393241, 1, 2490434, 393241, 1, 2490433, 393241, 1, 2490432, 393241, 1, 2490431, 393241, 1, 2490430, 393241, 1, 2490429, 393241, 1, 2490428, 393241, 1, 2490427, 393241, 1)

[node name="Christina" parent="." instance=ExtResource("2_5rcga")]
position = Vector2(1017, 813)

[node name="Camera2D" type="Camera2D" parent="Christina"]
zoom = Vector2(6, 6)
limit_left = 857
limit_top = 540
limit_right = 1177
limit_bottom = 828
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="tent_ext_exit_point" type="Area2D" parent="."]
position = Vector2(895, 838)

[node name="CollisionShape2D" type="CollisionShape2D" parent="tent_ext_exit_point"]
position = Vector2(123.5, 0)
shape = SubResource("RectangleShape2D_s121e")

[node name="tent_enter_point" type="Area2D" parent="."]
position = Vector2(1017, 655)

[node name="CollisionShape2D" type="CollisionShape2D" parent="tent_enter_point"]
shape = SubResource("CircleShape2D_smku0")

[connection signal="body_entered" from="tent_ext_exit_point" to="." method="_on_tent_ext_exit_point_body_entered"]
[connection signal="body_exited" from="tent_ext_exit_point" to="." method="_on_tent_ext_exit_point_body_exited"]
[connection signal="body_entered" from="tent_enter_point" to="." method="_on_tent_enter_point_body_entered"]
[connection signal="body_exited" from="tent_enter_point" to="." method="_on_tent_enter_point_body_exited"]
